fix sonarqube issue